; ModuleID = '/home/carl/AnghaBench/linux/net/ipv6/extr_syncookies.c_secure_tcp_syn_cookie.c'
source_filename = "/home/carl/AnghaBench/linux/net/ipv6/extr_syncookies.c_secure_tcp_syn_cookie.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.in6_addr = type { i32 }

@COOKIEBITS = common dso_local global i32 0, align 4
@COOKIEMASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.in6_addr*, %struct.in6_addr*, i32, i32, i32, i32)* @secure_tcp_syn_cookie to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @secure_tcp_syn_cookie(%struct.in6_addr* %0, %struct.in6_addr* %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca %struct.in6_addr*, align 8
  %8 = alloca %struct.in6_addr*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store %struct.in6_addr* %0, %struct.in6_addr** %7, align 8
  store %struct.in6_addr* %1, %struct.in6_addr** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %14 = call i32 (...) @tcp_cookie_time()
  store i32 %14, i32* %13, align 4
  %15 = load %struct.in6_addr*, %struct.in6_addr** %7, align 8
  %16 = load %struct.in6_addr*, %struct.in6_addr** %8, align 8
  %17 = load i32, i32* %9, align 4
  %18 = load i32, i32* %10, align 4
  %19 = call i32 @cookie_hash(%struct.in6_addr* %15, %struct.in6_addr* %16, i32 %17, i32 %18, i32 0, i32 0)
  %20 = load i32, i32* %11, align 4
  %21 = add nsw i32 %19, %20
  %22 = load i32, i32* %13, align 4
  %23 = load i32, i32* @COOKIEBITS, align 4
  %24 = shl i32 %22, %23
  %25 = add nsw i32 %21, %24
  %26 = load %struct.in6_addr*, %struct.in6_addr** %7, align 8
  %27 = load %struct.in6_addr*, %struct.in6_addr** %8, align 8
  %28 = load i32, i32* %9, align 4
  %29 = load i32, i32* %10, align 4
  %30 = load i32, i32* %13, align 4
  %31 = call i32 @cookie_hash(%struct.in6_addr* %26, %struct.in6_addr* %27, i32 %28, i32 %29, i32 %30, i32 1)
  %32 = load i32, i32* %12, align 4
  %33 = add nsw i32 %31, %32
  %34 = load i32, i32* @COOKIEMASK, align 4
  %35 = and i32 %33, %34
  %36 = add nsw i32 %25, %35
  ret i32 %36
}

declare dso_local i32 @tcp_cookie_time(...) #1

declare dso_local i32 @cookie_hash(%struct.in6_addr*, %struct.in6_addr*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
